--- a/package.json
+++ b/package.json
@@ -4,19 +4,34 @@
   "description": "FEC",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack-dev-server": "webpack-dev-server",
+    "build": "webpack --mode production",
+    "start-dev": "webpack-dev-server --mode=development"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hunterMotko/frontend-capstone.git"
+    "url": "git+https://github.com/fec-kidsnextdoor/frontend-capstone.git"
   },
-  "author": "Kids next door",
+  "author": "kidsNextDoor",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hunterMotko/frontend-capstone/issues"
+    "url": "https://github.com/fec-kidsnextdoor/frontend-capstone/issues"
   },
-  "homepage": "https://github.com/hunterMotko/frontend-capstone#readme",
+  "homepage": "https://github.com/fec-kidsnextdoor/frontend-capstone#readme",
   "dependencies": {
-    "react": "^18.0.0"
+    "html-webpack-plugin": "^5.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
