--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
   },
   "homepage": "https://github.com/fec-kidsnextdoor/frontend-capstone#readme",
   "dependencies": {
-    "html-webpack-plugin": "^5.5.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "webpack-dev-server": "^4.7.4"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "html-webpack-plugin": "^5.5.0",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "jest": "^27.5.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
