--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FEC",
   "main": "index.js",
   "scripts": {
-    "server": "npx nodemon --watch server",
+    "server": "npx nodemon --watch index.js",
     "client": "npx webpack --watch",
     "test": "jest"
   },
