--- a/.gitignore
+++ b/.gitignore
@@ -37,13 +37,13 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+*bundle.js
 # Dependency directories
 node_modules/
 jspm_packages/
 package-lock.json
 # TypeScript v1 declaration files
 typings/
-
 # TypeScript cache
 *.tsbuildinfo
 
