--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/fec-kidsnextdoor/frontend-capstone#readme",
   "dependencies": {
-    "react": "^17.0.2",
     "express": "^4.17.1",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
