--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-select": "^5.2.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
