--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
+  },
+  "resolutions": {
+    "styled-components": "^5.3.5"
   }
 }
