--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-select": "^5.2.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
