--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "file-loader": "^6.2.0",
     "jest": "^27.5.1",
+    "jest-css-modules-transform": "^4.3.0",
     "nodemon": "^2.0.7",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
