--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/user-event": "^14.1.0",
     "@testing-library/react": "^12.1.4",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
