--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/fec-kidsnextdoor/frontend-capstone#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "cloudinary-react": "^1.7.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
