--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "FEC",
   "main": "index.js",
   "scripts": {
-    "server": "npx nodemon --watch index.js && npx webpack --watch",
-    "client": "npx webpack --watch",
+    "server": "npx nodemon --watch index.js",
+    "client" : "npx webpack --config webpack.dev.js --watch",
+    "build": "webpack --config webpack.prod.js",
+    "start:prod": "",
     "test": "jest"
   },
   "repository": {
@@ -19,16 +21,15 @@
   },
   "homepage": "https://github.com/fec-kidsnextdoor/frontend-capstone#readme",
   "dependencies": {
-    "axios": "^0.26.1",
-    "cloudinary-react": "^1.7.2",
-    "cloudinary-core": "^2.12.3",
     "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-select": "^5.2.2",
     "styled-components": "^5.3.5",
+    "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
@@ -40,7 +41,6 @@
     "@testing-library/react": "^12.1.4",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
-    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
